bpo-30817: Fix PyErr_PrintEx() when no memory (#2526)